--- a/image_finder/package.json
+++ b/image_finder/package.json
@@ -19,7 +19,7 @@
   "bugs": {
     "url": "https://github.com/luxplanjay/webpack-starter-kit/issues"
   },
-  "homepage": "https://https://github.com/Samira140599/goit-js-hw-13-image-finder",
+  "homepage": "https://github.com/Samira140599/goit-js-hw-13-image-finder",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -51,6 +51,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6",
+    "lodash.debounce": "^4.0.8",
     "pnotify": "^5.2.0"
   }
 }
